# wh-bench-v0.1

./: .env.example  .gitignore  DATASHEET.md  LICENSE  README.md  TECH_REPORT.md  hf_README.md  pyproject.toml
blog/: wechat_draft.md
data/distilled/: qa_raw.jsonl  stats.json
data/filtered/: qa_v0.1_auto.jsonl
data/judged/: jury_drop_list.txt  jury_verdicts.jsonl  qa_judged.jsonl  qa_judged_claude.jsonl
data/processed/: contested_ids.txt  stats.json  wh_bench_v0.1_all.jsonl  wh_bench_v0.1_all.parquet  wh_bench_v0.1_test.jsonl  wh_bench_v0.1_test.parquet  wh_bench_v0.1_train.jsonl  wh_bench_v0.1_train.parquet
docs/: README.md  data.json  index.html  tech_report.md
reports/: filter_stats.json  jury_summary.md  llm_judge_review.md  review_sample.jsonl  review_sample.md
scripts/: 01_load_sources.py  02_distill.py  03_filter.py  04_review_app.py  04b_sample_for_review.py  05_baseline.py  06_publish.py  07_finalize.py  08_hf_upload.py  jury_decide.py  llm_judge.py  llm_judge_claude.py
src/wh_bench/: __init__.py  schemas.py  sources.py  utils.py
tools/: README.md  whbench_eval.py
